4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/c_wiz.c: call update_ob_speed if removed object is animated.
Ryo 2006-07-25

server/server.c: Select op->facing instead of op->direction in process_events
    for players and monsters as the direction reference for the face to display.
    Fix for bug #1528182. (*few* ! that's a lot of bugs ! :))
server/spell_util.c: Make the search for a friendly target for some spells also
    browse transports located in the square from which the spell was cast.
    This is a fix for bug #1528018
server/c_wiz.c: Prevents the use of reset on self-map while in a transport.
    Work-around for bug #1528172.
server/skill_util.c: Make dragons prefer clawing over anything else as unarmed
    combat technique. Fix for bug #1528197
Yann Chachkoff 2006-07-21

common/treasure.c: Added explicit item_power calculation for generated items that
    got an item_power of 0 - should solve bug #1460354.
Yann Chachkoff 2006-07-21

scommon/map.c: Add check to block_linked() to make sure things never block themself.
server/spell_attack.c: Target the head of monsters diseases are cast at.
Alex Schultz 2006-07-18

Fix player count reporting to the metaserver. It now excludes connections with
not-yet-logged-in players and AFK/WIZ/BOT players.
---
socket/metaserver.c: In metaserver_update() use the same conditions as for the
   who command.
Andreas Kirschbaum 2006-07-16

server/spell_effect.c, include/global.h, common/init.c, server/init.c: Add 
    setting "create_home_portals" which allows server admins to allow town
    portals to be created in apartments. Based on a patch by pippijn in the
    cf-ext project.
lib/settings: Set default create_home_portals to FALSE
Alex Schultz 2006-07-12
